# MecScript

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
Common/: CMakeLists.txt
Common/src/: BasicTypes.h  Checksum.cpp  Checksum.h  Console.h  Instructions.h  MathUtils.h  NativeFunctions.h  Options.h  OrderedMap.hpp  ScriptInfo.h  Value.cpp  Value.h
Compiler/: CMakeLists.txt  README.md  natives.mec
Compiler/src/: main.cpp
Compiler/src/compiler/: Array.h  Class.h  Compiler.cpp  Compiler.h  CompilerBase.cpp  CompilerBase.h  CompilerData.h  Function.cpp  Function.h  JumpTable.hpp  Native.cpp  Native.h  Rules.cpp  Rules.h  TypeSystem.cpp  TypeSystem.h  Variable.cpp  Variable.h
Compiler/src/error/: ErrorHandler.cpp  ErrorHandler.h
Compiler/src/lexer/: Lexer.cpp  Lexer.h  Tokens.h
Compiler/src/preprocessor/: PreProcessor.cpp  PreProcessor.h
Compiler/src/utils/: Disassembler.cpp  Disassembler.h  MecScriptBase.cpp  MecScriptBase.h  ScriptUtils.cpp  ScriptUtils.h
Decompiler/: CMakeLists.txt  README.md
Decompiler/src/: main.cpp
Scripts/: build-compiler.bat  build-decompiler.bat  build-vm.bat
VirtualMachine/: CMakeLists.txt  README.md
VirtualMachine/src/: VmConfig.h  main.cpp
VirtualMachine/src/debugger/: Debugger.cpp  Debugger.h
VirtualMachine/src/vm/: MecVm.cpp  MecVm.h
VsCodeExtension/: README.md  package.json  vsc-extension-quickstart.md
VsCodeExtension/mecscript/: CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json
VsCodeExtension/mecscript/syntaxes/: mecscript.tmLanguage.json
VsCodeExtension/syntaxes/: mecscript.tmLanguage.json
docs/: Mec_Language_Features.xlsx
scripts/: MecScriptBinary.hexproj  mvic.mbin  mvic.mec  syntax.mec  test.mbin  test.mec
